@@ -21,3 +21,12 @@ Fri Jan 28 11:23:01 EST 2000
 Fixed up a few script paths in the .in files; now it appears
 to install the demos OK.  
 
+-------------------------------------------------------------------------------
+
+Mon Jan 31 13:48:06 PST 2000
+(Mandrake)
+
+test for EAGAIN in length testing, fixes potential linux processing bug under
+OSS.
+
+
